# nofwl

./: Cargo.toml  nofwl.yml
plugins/bing/: meta.yml
plugins/chatgpt/: meta.yml
