[package]
name = "nofwl"
version = "0.1.0"
edition = "2021"
description = "NoFWL Desktop Application"
authors = ["rayisaninja <ray@rayisa.ninja>"]
homepage = "https://github.com/rayisaninja/nofwl"
repository = "https://github.com/rayisaninja/nofwl"
keywords = ["desktop", "plugins", "tauri"]
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
